name:                rei-exercise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benweitzman/rei-exercise#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Weitzman
maintainer:          benweitzman@gmail.com
copyright:           2017 Ben Weitzman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Robot
                     , Robot.Actions
                     , Robot.Parser
                     , Robot.Types
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , attoparsec
                     , text
  default-language:    Haskell2010

executable rei-exercise
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rei-exercise
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benweitzman/rei-exercise
